# ManulEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  text.txt
ManulEngine/src/: ManulEngine.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp  mapch.cpp  mapch.h
ManulEngine/src/ManulEngine/Audio/: AudioBackend.h  AudioEngine.cpp  AudioEngine.h
ManulEngine/src/ManulEngine/Audio/FMOD/: FMODBackend.cpp  FMODBackend.h
ManulEngine/src/ManulEngine/Audio/OpenAL/: OpenALBackend.cpp  OpenALBackend.h
ManulEngine/src/ManulEngine/Core/: Application.cpp  Application.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Logger.h  MouseCodes.h  Scene.h  Window.cpp  Window.h
ManulEngine/src/ManulEngine/Core/Math/: Math.h
ManulEngine/src/ManulEngine/Math/: Math.cpp  Math.h
ManulEngine/src/ManulEngine/Physics/2D/: Physics2D.cpp  Physics2D.h
ManulEngine/src/ManulEngine/Renderer/: Camera.cpp  Camera.h  ImguiLayer.cpp  ImguiLayer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererBackend.cpp  RendererBackend.h  Shader.h  Texture.h
ManulEngine/src/ManulEngine/ResourceManager/: Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourcePacker.cpp  ResourcePacker.h
ManulEngine/src/Platform/OpenGL/: OpenGLBackend.cpp  OpenGLBackend.h  OpenGLPrimitives.cpp  OpenGLPrimitives.h  OpenGLScreenShot.cpp  OpenGLScreenShot.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSkybox.h  OpenGLTexture.cpp  OpenGLTexture.h
ManulEngine/src/Platform/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipline.cpp  VulkanPipline.h  VulkanSurface.cpp  VulkanSurface.h
ManulEngine/src/Platform/Vulkan - Copy/: VulkanBackend.cpp  VulkanBackend.h  VulkanDebug.h  VulkanSurface.cpp  VulkanSurface.h
ManulEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
ManulEngine/src/VK_Renderer/: VulkanBackend.cpp  VulkanBackend.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h
glfw/: build.bat
glfw/src/: egl_context.h
